jupyterhub/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jupyterhub-ingress
spec:
  tls:
    - secretName: jupyterhub-cert
  rules:
    - host: hub.sachiniyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
